[tool.poetry]
name = "leetcode-python"
version = "0.1.0"
description = "Solutions to leetcode by python3"
authors = ["huangkai <h1770360848@outlook.com>"]
readme = 'README.md'
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
target-version = ['py37']
skip-string-normalization = true

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
